--- a/app/src/main/res/layout/activity_new_scoring.xml
+++ b/app/src/main/res/layout/activity_new_scoring.xml
@@ -7,10 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <Button
@@ -103,8 +103,7 @@
             android:textSize="20sp"
             android:layout_below="@+id/numEndsLabel"
             android:layout_toRightOf="@+id/numEnds"
-            android:layout_alignParentRight="true"
-            android:onClick="inceaseEnds"/>
+            android:layout_alignParentRight="true"/>
 
         <TextView
             android:id="@+id/arrowPerEndLabel"
@@ -123,6 +122,16 @@
         </Spinner>
 
         <!--TODO: Use Floating Button for Starting Scoring-->
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/startScoring"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            app:fabSize="normal"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="64dp">
+        </android.support.design.widget.FloatingActionButton>
 
     </RelativeLayout>
 
@@ -137,5 +146,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
+
+
+
 
 </android.support.constraint.ConstraintLayout>
