Viewing Previous Scoring Rounds implemented and can view specific scores. Scoring Round is now serializable so can be passed between intents.

--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -64,6 +64,7 @@
         android:layout_height="0dp"
         android:layout_weight="8"
         android:text="Complete Scoring"
+        android:id="@+id/completeScoring"
         android:background="@color/colorPrimary"/>
 </LinearLayout>
 </android.support.constraint.ConstraintLayout>
