--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -59,6 +59,7 @@
        android:layout_weight="80">
    </android.support.v7.widget.RecyclerView>
 
+    <!--TODO: IMPLEMENT COMPLETE SCORING-->
     <Button
         android:layout_width="match_parent"
         android:layout_height="0dp"
