Added Internal Database for Scoring Rounds and Presets

--- a/app/src/main/res/layout/activity_new_scoring.xml
+++ b/app/src/main/res/layout/activity_new_scoring.xml
@@ -123,6 +123,7 @@
 
         <!--TODO: IMPLEMENT SAVE AS PRESET FUNCTIONALITY-->
         <Button
+            android:id="@+id/saveAsPresetButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/arrowSpinner"
