Added Confirmation for completing scoring round and notes to scoring round as optional

--- a/app/src/main/res/layout/activity_new_scoring.xml
+++ b/app/src/main/res/layout/activity_new_scoring.xml
@@ -24,7 +24,7 @@
             android:id="@+id/divisionLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/loadPreset"
+            android:layout_below="@+id/loadPresetButton"
             android:layout_alignLeft="@+id/divisionSpinner"
             android:text="@string/division"/>
 
@@ -121,12 +121,22 @@
             android:layout_alignParentLeft="true">
         </Spinner>
 
+        <CheckBox
+            android:id="@+id/notesCheckbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/arrowSpinner"
+            android:layoutDirection="rtl"
+            android:layout_marginVertical="16dp"
+            android:text="Include Ability to Add Notes?"
+            android:onClick="notesCheckboxClicked"/>
+
         <!--TODO: IMPLEMENT SAVE AS PRESET FUNCTIONALITY-->
         <Button
             android:id="@+id/saveAsPresetButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/arrowSpinner"
+            android:layout_below="@+id/notesCheckbox"
             android:layout_margin="40dp"
             android:text="Save as Preset"/>
 
