Can submit scoring rounds (only when previously joined team) and can leave teams (assumption of can only join team once per user_id)

--- a/app/src/main/res/layout/activity_view_all_teams.xml
+++ b/app/src/main/res/layout/activity_view_all_teams.xml
@@ -9,12 +9,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:text="List of All Teams"
-            android:gravity="center"
-            android:textSize="24sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        <!--<TextView-->
+            <!--android:text="List of All Teams"-->
+            <!--android:gravity="center"-->
+            <!--android:textSize="24sp"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content" />-->
 
         <!--<LinearLayout-->
             <!--android:layout_width="match_parent"-->
