--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -9,11 +9,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/viewMyTeamsButton"
+            android:layout_marginVertical="24dp"
+            android:text="View My Teams"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/joinTeamButton"
-            android:layout_marginVertical="48dp"
+            android:layout_marginVertical="24dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Join a Team"/>
